[tool.poetry]
name = "codewars"
version = "0.1.0"
description = ""
authors = ["Michael Jordan <mjthecoder53161@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
